--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,9 @@
     "angular-sanitize": "1.0.7",
     "lawnchair":"0.6.3",
     "underscore":"1.5.1",
-    "angular-masonry": "0.4.0"
+    "angular-masonry": "0.4.0",
+    "masonry": "3.1.2",
+    "imagesloaded": "~3.0.1"
   },
   "devDependencies": {
     "angular-mocks": "1.0.7",
